# Audiobookshelf-librarian-MCP

./: .env.example  .gitignore  ABSL-template.xml  CHANGELOG.md  Dockerfile  LICENSE  README.md  abs-librarian-mcp.xml  absl-template.xml  docker-compose.yml  pyproject.toml  unraid-template.xml
.github/workflows/: ci.yml  docker-publish.yml
src/abs_librarian/: __init__.py  __main__.py  abs_client.py  audit.py  config.py  fs_tools.py  jail.py  metadata.py  server.py
tests/: test_abs_client.py  test_fs_tools.py  test_jail.py  test_metadata.py
