[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "abs-librarian-mcp"
version = "0.2.6"
description = "MCP server for managing an Audiobookshelf library — metadata and file-system ops"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Richard Hamblen", email = "richardh@iname.com" }]
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.0",
    "httpx>=0.27",
]

[project.scripts]
abs-librarian-mcp = "abs_librarian.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/abs_librarian"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
